# prisma-client-rust-bug

./: Cargo.toml  README.md
prisma/: schema.prisma
src/: db.rs
